# bottasklist-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bottasklist/: __init__.py  main.py
