[project]
name = "bottasklist"
version = "0.0.0"
authors = [
  { name="Ihsaan Patel" },
]
description = "Tools for LLMs to keep track of tasks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/pateli18/bottasklist"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
exclude = [
  "/.*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/bottasklist"]
